--- a/material-tailwind-dashboard-react-main/package.json
+++ b/material-tailwind-dashboard-react-main/package.json
@@ -13,10 +13,12 @@
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "6.17.0",
@@ -31,6 +33,6 @@
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
     "tailwindcss": "3.3.4",
-    "vite": "4.5.0"
+    "vite": "^4.5.9"
   }
 }
