--- a/material-tailwind-dashboard-react-main/package.json
+++ b/material-tailwind-dashboard-react-main/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-big-calendar": "^1.17.1",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-paginate": "^8.3.0",
