--- a/material-tailwind-dashboard-react-main/package.json
+++ b/material-tailwind-dashboard-react-main/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
+    "@hookform/resolvers": "^4.1.0",
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.9",
@@ -22,6 +23,7 @@
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-paginate": "^8.3.0",
     "react-router-dom": "6.17.0",
     "yup": "^1.6.1"
