--- a/material-tailwind-dashboard-react-main/package.json
+++ b/material-tailwind-dashboard-react-main/package.json
@@ -20,12 +20,13 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
-    "react-big-calendar": "^1.17.1",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-paginate": "^8.3.0",
     "react-router-dom": "6.17.0",
+    "sweetalert2": "^11.17.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
