--- a/material-tailwind-dashboard-react-main/package.json
+++ b/material-tailwind-dashboard-react-main/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
+    "nodemailer": "^6.10.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
